openshift/template/preprod/staff-processor-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: staff-processor
    promotion-group: staff-processor
  name: staff-processor
spec:
  host: staff-processor-domstr.cloudapps.pre.nsw.education
  port:
    targetPort: 8080-tcp
  tls:
    termination: edge
  to:
    kind: Service
    name: staff-processor
    weight: 100
  wildcardPolicy: None
